--- a/themes/cactus/layout/_partial/head.ejs
+++ b/themes/cactus/layout/_partial/head.ejs
@@ -77,4 +77,7 @@
 		</script>
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
 	<% } %>
+	<% if (page.mathjax || page.katex) { %>
+  		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.21/dist/katex.min.css">
+	<% } %>
 </head>
